Set QUIC connection's last_send_for_timeout_ to the send time of the first sent packet after receiving a packet, even if the sent packet is not a retransmission. Protected by default enabled --quic_better_last_send_for_timeout

Merge internal change: 131623416

BUG=642017

Review-Url: https://codereview.chromium.org/2288843002
Cr-Commit-Position: refs/heads/master@{#415157}

Former-commit-id: 10ae460d345bb14f03972f43c253c822e08ed5e2